services/traefik/30.0.2/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: kommander-traefik-dashboard
  namespace: ${releaseNamespace}
spec:
  ports:
    - name: dashboard-http
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: traefik
    app.kubernetes.io/instance: kommander-traefik
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: kommander-traefik-prometheus
  namespace: ${releaseNamespace}
  labels:
    servicemonitor.kommander.mesosphere.io/path: metrics
spec:
  ports:
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: metrics
  selector:
    app: traefik
    app.kubernetes.io/instance: kommander-traefik
  type: ClusterIP
---
# Expose Traefik dashboard in insecure mode according to
# <https://doc.traefik.io/traefik/v2.0/operations/dashboard/>.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: ${releaseNamespace}
  labels:
    app.kubernetes.io/instance: traefik-dashboard
    app.kubernetes.io/name: traefik-dashboard
    app.kubernetes.io/version: 2.5.6
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "${releaseNamespace}-stripprefixes@kubernetescrd,${releaseNamespace}-forwardauth@kubernetescrd,${releaseNamespace}-rewrite-api@kubernetescrd"
spec:
  # Requesting `/` from kommander-traefik-dashboard results in an absolute redirect to `/dashboard/`, which then 404s.
  # We provide a path each for `/dashboard/` and `/api/` to prevent requests to `/`.
  rules:
    - http:
        paths:
          - backend:
              service:
                name: kommander-traefik-dashboard
                port:
                  number: 80
            path: /dkp/traefik/dashboard/
            pathType: Prefix
          - backend:
              service:
                name: kommander-traefik-dashboard
                port:
                  number: 80
            path: /dkp/traefik/api/
            pathType: Prefix
